Fix: Fixed get all users. Changed the Role Entity's User mapping from Set<Role> to List<Role>